--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.MyGame" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <!-- Base application theme para o modo escuro -->
+    <style name="Base.Theme.MyGame" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Remove cor padrão dos botões no tema escuro -->
+        <item name="colorButtonNormal">#4F4F4F</item>
+        <item name="colorPrimary">#4F4F4F</item>
+        <item name="colorPrimaryVariant">#4F4F4F</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
     </style>
 </resources>
