--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,5 +6,7 @@
         <item name="colorPrimary">#4F4F4F</item>
         <item name="colorPrimaryVariant">#4F4F4F</item>
         <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:windowLightStatusBar">false</item> <!-- ícones brancos -->
     </style>
 </resources>
