--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">#4F4F4F</item>
         <item name="colorPrimaryVariant">#4F4F4F</item>
         <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:windowLightStatusBar">false</item> <!-- ícones brancos -->
     </style>
 
     <style name="Theme.MyGame" parent="Base.Theme.MyGame" />
